# css

./: AGENTS.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json  task.md
scripts/: create-icns.mjs  create-latest-json.mjs  generate-icons.mjs
src/: main.js  styles.css  themes.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  autostart.rs  commands.rs  lib.rs  logging.rs  main.rs  settings.rs  tray.rs  window_state.rs
src-tauri/src/quota/: auth.rs  command.rs  mod.rs  normalize.rs  service.rs  session.rs  types.rs
src/app/: app.js  constants.js  custom-select.js  dom.js  formatters.js  geometry.js  icons.js  logger.js  onboarding-controller.js  quota-controller.js  render.js  settings-controller.js  settings-model.js  state.js  tauri-service.js  tooltip-controller.js  update-controller.js  update-status.js  window-controller.js
src/app/window/: ball-controller.js  panel-controller.js  position-controller.js
src/components/: gauge.js
src/styles/: animations.css  base.css  meter.css  onboarding.css  quota.css  settings.css  shell.css  tooltip.css
src/themes/: basic1.css  basic2.css  basic3.css  default.css
