[package]
name = "codex-quota-widget"
version = "1.4.0"
description = "通过 Codex CLI 读取 Codex 额度的 Rust 版悬浮小组件。"
authors = ["fengshi"]
edition = "2021"
license = "MIT"
rust-version = "1.77.2"

[lib]
name = "codex_quota_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "image-png", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
